# django-spire

./: .aiignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  README.md  README.rst  ZEN.md  base_requirements.txt  build.mjs  build.py  conftest.py  convert_entry_version_block.py  dandy_settings.py  deleteme.py  dev_requirements.txt  development_requirements.txt  justfile  knowledge_import.py  manage.py  mkdocs.yml  mkdocs_requirements.txt  opencode.json  package-lock.json  package.json  production_requirements.txt  pyproject.toml  requirements.txt  ruff.toml  scratch_1.py  seed.py  setup.py  start.py  test.md  test_seeder.py  ty.toml
.claude/: settings.local.json
.github/scripts/: ai_review.py
.github/workflows/: ai_code_review.yml  ci.yml  linting.yml  publish_pypi_package.yml  quality.yml  run_tests.yml  security.yml  uv_lock.yml
.junie/: guidelines.md
.opencode/agents/: dandy.md  queryset.md  seeding.md  service_layer.md  sudo_code.md  template.md
.run/: Run Server.run.xml
.workspace/: service.py
django_spire/: __init__.py  apps.py  conf.py  constants.py  consts.py  context_processors.py  decorators.py  exceptions.py  settings.py  shortcuts.py  tools.py  urls.py  utils.py
django_spire/ai/: admin.py  apps.py  decorators.py  mixins.py  models.py  urls.py  views.py
django_spire/api/: admin.py  api_v1.py  apps.py  choices.py  forms.py  models.py  navigation.py  querysets.py  tools.py
django_spire/auth/: apps.py  decorators.py  forms.py
django_spire/authentication/: apps.py  urls.py
django_spire/breadcrumb/: apps.py  models.py
django_spire/breadcrumbs/: apps.py
django_spire/celery/: __init__.py  admin.py  apps.py  manager.py  meta.py  models.py  querysets.py  result.py  tools.py  tracker.py
django_spire/changelog/: __init__.py  apps.py  choices.py  entities.py  exceptions.py  navigation.py  urls.py  validators.py
django_spire/comment/: admin.py  apps.py  factories.py  forms.py  mixins.py  models.py  navigation.py  querysets.py  urls.py  utils.py  views.py  widgets.py
django_spire/contrib/: __init__.py  constants.py  decorators.py  redirects.py  shortcuts.py  utils.py
django_spire/cookbook/: apps.py  factories.py  forms.py  models.py  querysets.py
django_spire/core/: apps.py  breadcrumbs.py  constants.py  context_processors.py  decorators.py  maps.py  middleware.py  models.py  querysets.py  scss_watcher.py  shortcuts.py  signals.py  urls.py  utils.py
django_spire/db/: apps.py  shortcuts.py
django_spire/file/: admin.py  apps.py  exceptions.py  extensions.py  factory.py  fields.py  forms.py  handlers.py  interfaces.py  linker.py  mixins.py  models.py  navigation.py  path.py  queryset.py  services.py  tools.py  urls.py  utils.py  validators.py  views.py  widgets.py
django_spire/form/: apps.py  confirmation_forms.py  urls.py  utils.py
django_spire/forms/: confirmation_forms.py
django_spire/help/: apps.py
django_spire/help_desk/: admin.py  apps.py  choices.py  constants.py  enums.py  exceptions.py  factories.py  forms.py  handlers.py  models.py  navigation.py  notifications.py  permissions.py  querysets.py
django_spire/history/: admin.py  apps.py  choices.py  mixins.py  models.py  querysets.py  utils.py
django_spire/home/: apps.py  urls.py  views.py
django_spire/knowledge/: admin.py  apps.py  context_processors.py  exceptions.py  models.py  navigation.py
django_spire/landing/: context_data.py  forms.py  urls.py  utils.py  views.py
django_spire/maintenance/: middleware.py
django_spire/metric/: api_v1.py  apps.py
django_spire/notification/: admin.py  apps.py  automations.py  choices.py  email.py  enums.py  exceptions.py  factories.py  managers.py  maps.py  mixins.py  models.py  processors.py  querysets.py  sender.py  urls.py  utils.py
django_spire/options/: mixins.py  options.py
django_spire/pagination/: pagination.py
django_spire/permission/: admin.py  apps.py  constants.py  decorators.py  factories.py  forms.py  models.py  permissions.py  querysets.py  urls.py  utils.py  views.py
django_spire/profiling/: __init__.py  panel.py
django_spire/search/: urls.py  views.py
django_spire/seeding/: __init__.py  abc_meta.py  apps.py  callable_seeder.py  custom_seeder.py  enums.py  factories.py  helper.py  llm_seeder.py  maps.py  models.py  processor.py  seeder.py  seeding.py  static_seeder.py
django_spire/speech_to_text/: apps.py  urls.py  views.py
django_spire/sync/: __init__.py  apps.py  models.py
django_spire/templates/: 403.html  404.html  500.html
django_spire/templatetags/: core_tags.py
django_spire/tests/: test_cases.py
django_spire/theme/: apps.py  enums.py  models.py  navigation.py  utils.py
django_spire/user_account/: admin.py  apps.py  factories.py  forms.py  middleware.py  mixins.py  seed.py  urls.py  views.py
django_spire/views/: modal_views.py  portal_views.py
docs/: TEMPLATE_DOC.md  generate_api_reference.py  index.md
docs/about/: contributors.md
docs/changelog/: archived_changelog.md  changelog.md  v1_changelog.md
docs/components/: accordian.md  accordion.md  badge.md  button.md  card.md  comment.md  container.md  dropdown.md  element.md  file.md  form.md  help.md  item.md  modal.md  navigation.md  notification.md  page.md  tab.md
docs/roadmap/: 2025_roadmap.md  (+2 more)
example/: admin.py  apps.py  context_data.py  dandy_settings.py  example_urls.py  manage.py  models.py  requirements.txt  settings.py  settings.py~  urls.py  utils.py  views.py
examples/: admin.py  apps.py  manage.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
playground/: admin.py  apps.py  manage.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
test_project/: __init__.py  asgi.py  base_settings.py  celery.py  changelog.py  dandy_settings.py  docker-compose.sync.yml  docker-compose.test.yml  playwright.config.py  postgres_settings.py  pytest.ini  seed.py  settings.py  sqlite_settings.py  test_settings.py  urls.py  worker.py  wsgi.py
testing/: manage.py  run_coverage.py  settings.py  urls.py
tests/: settings.py
workspace/: setup_jupyter_env.py
(+5131 files in other folders)
