[project]
name = "django-spire"
description = "A project for Django Spire"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE.md" }
authors = [
    { name = "Brayden Carlson", email = "braydenc@stratusadv.com" },
    { name = "Nathan Johnson", email = "nathanj@stratusadv.com" },
]
keywords = [
    "portal",
    "cmms",
    "spire",
    "django",
    "backend",
    "frontend",
    "javascript",
    "active server pages",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["django_spire"]

[tool.setuptools.package-data]
django_spire = [
    "**/*.py",
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.png",
    "**/*.jpg"
]

[tool.setuptools.dynamic]
version = { attr = "django_spire.consts.VERSION" }
dependencies = { file = "requirements.txt" }

[tool.dev_tool]
port = 5745
single_instance = true

[tool.docker]
container-size = "8g"
postgres-version = 14

[tool.coverage]
exclude = [
    # Directories
    "*/.venv/*",
    "*/migrations/*",
    "*/static/*",
    "*/system/*",
    "*/tests/*",
    "*/venv/*",

    # Files
    "__init__.py",
    "apps.py",
    "automation.py",
    "manage.py",
]
failfast = false
nobrowser = false
noerase = false
nohtml = false
settings = "testing.settings"
verbosity = 1

[tool.django.coverage]
apps = ["."]
settings = "system.testing.settings"

[tool.python.coverage]
apps = ["tests"]

[tool.unittest]
failfast = false
keepdb = true
verbosity = 1

[tool.django.unittest]
apps = ["."]
settings = "system.testing.settings"

[tool.python.unittest]
apps = ["tests"]

[tool.ruff]
extend = "ruff.toml"

[tool.scripting]
include = [
    ".dev",
    "workspace",
    "workspaces",
]
